deployment/example-workload/kuard-minikube-route.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kuard
  name: kuard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        name: kuard
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kuard
  name: kuard
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuard
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: contour.heptio.com/v1alpha1
kind: Route
metadata: 
  name: kuard
  namespace: default
spec: 
  host: k8s.local
  routes: 
    - pathPrefix: /
      upstreams: 
        - serviceName: kuard
          servicePort: 80
